# university-projects

./: README.md
azul-board-game/: Makefile  README.md  requirements.txt
azul-board-game/assignment/: Assignment.md  architecture.uxf  design.uxf
azul-board-game/azul/: bag.py  board.py  factory.py  final_points_calculation.py  floor.py  game.py  (+11 more)
coffee-quality-statistical-analysis/: README.md  coffee_analysis.R  coffee_quality.csv
covid-genome-analysis/: README.md  coivd-genome-analysis.ipynb
crossword-CSP-solver/: README.md  crossword.py  krizovky_out.txt  solutions.txt
delivery-service-simulation/: README.md
delivery-service-simulation/delivery-service/: CMakeLists.txt  City.cpp  City.fwd.h  City.h  CityHasher.cpp  CityHasher.h  Courier.cpp  Courier.h  CourierHandler.cpp  CourierHandler.h  DeliveryService.cpp  DeliveryService.h  Map.cpp  Map.h  Package.cpp  Package.h  testCity.cpp  testCourier.cpp  testCourierHandler.cpp  testDeliveryService.cpp  testMap.cpp  testPackage.cpp
delivery-service-simulation/delivery-service/documentation/: documentation.md
delivery-service-simulation/delivery-service/files/: bad_map_file.txt  dijkstra_test_map.txt  slovak_map.txt  small_map.txt
democracy-index-analysis/: README.md
fantom-board-game/: README.md  fantom.py  hrac.py  interface.py  mapa.py  suradnice_bodov.txt
fourier-series-visualization/: README.md
slovak-election-prediction/: README.md
solvency-prediction-with-quasinewton-logistic-regression/: README.md
stochastic-optimization-methods-showcase/: GA_correlation_matrix_subsample.py  PSO_steiner_tree.py  README.md
wine-price-prediction/: README.md
(+162 files in other folders)
